# macroman_ai_aimbot_od

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  PHASE4_AUDIT.md  PROJECT-OVERVIEW.md  README.md  macroman_ai_aimbot.cpp  macroman_ai_aimbot.h
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
cmake/: CodeCoverage.cmake
config/: global.ini
config/games/: cs2.json  pubg.json  rust.json  valorant.json
docs/: ARCHITECTURE_QUICKREF.md  ARDUINO_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  CRITICAL_TRAPS.md  DEVELOPER_GUIDE.md  Doxyfile.in  FAQ.md  PHASE10_REVIEW.md  PHASE7_COMPLETION.md  PHASE8_COMPLETION.md  PHASE8_TRACY_NOTES.md  SAFETY_ETHICS.md  TECHNICAL_REVIEW.md  USER_GUIDE.md  phase2-completion.md  phase3-completion.md  phase4-completion.md  phase5-completion.md  phase7-completion.md
docs/plans/: 2025-12-29-modern-aimbot-architecture-design.md  2025-12-29-phase1-foundation.md  2025-12-29-phase2-capture-detection.md  2025-12-29-phase3-tracking-prediction.md  2025-12-29-phase4-input-aiming.md  2025-12-29-phase5-config-autodetection.md  2025-12-30-phase0-architecture-setup.md  2025-12-30-phase10-ui-observability.md  2025-12-30-phase6-safety-humanization.md  2025-12-30-phase7-testing-benchmarking.md  2025-12-30-phase8-optimization-polish.md  2025-12-30-phase9-documentation.md  PR_REVIEW_PHASE8.md
docs/plans/State-Action-Sync/: BACKLOG.md  SPEC-DRIVEN-DEVELOPMENT.md  STATUS.md
docs/risk-mitigation/: 01-hardware-input-emulation.md  02-statistical-anomaly-avoidance.md  03-process-hygiene.md  04-read-only-philosophy.md  README.md
scripts/: setup-hooks.ps1
src/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp  ui_demo_main.cpp
src/capture/: CMakeLists.txt  DuplicationCapture.cpp  DuplicationCapture.h  WinrtCapture.cpp  WinrtCapture.h  placeholder.cpp
src/config/: AppConfig.h  CMakeLists.txt  ConfigManager.cpp  GameProfile.h
src/core/: CMakeLists.txt
src/core/config/: GameDetector.cpp  GameDetector.h  GameProfile.h  GlobalConfig.cpp  GlobalConfig.h  ModelManager.cpp  ModelManager.h  ProfileManager.cpp  ProfileManager.h  SharedConfig.h  SharedConfigManager.cpp  SharedConfigManager.h
src/core/entities/: AimCommand.h  Detection.h  DetectionBatch.h  Frame.h  KalmanState.h  MathTypes.h  MouseMovement.h  Target.h  TargetDatabase.h  Texture.h  TexturePool.cpp  TexturePool.h
src/core/interfaces/: IDetector.h  IMouseDriver.h  IScreenCapture.h  ITargetPredictor.h
src/core/metrics/: PerformanceMetrics.h
src/core/profiling/: Profiler.h
src/core/threading/: LatestFrameQueue.h  ThreadManager.cpp  ThreadManager.h  ThreadSafeQueue.h
src/core/types/: Enums.h
src/core/utils/: Logger.cpp  Logger.h  PathUtils.h
src/detection/: CMakeLists.txt  DetectorFactory.cpp  DetectorFactory.h
src/detection/directml/: DMLDetector.cpp  DMLDetector.h  InputPreprocessing.hlsl  InputPreprocessor.cpp  InputPreprocessor.h
src/detection/postprocess/: PostProcessor.cpp  PostProcessor.h
src/detection/tensorrt/: InputPreprocessing.cu  TensorRTDetector.cpp  TensorRTDetector.h
src/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
src/input/drivers/: ArduinoDriver.cpp  ArduinoDriver.h  Win32Driver.cpp  Win32Driver.h
src/input/humanization/: Humanizer.cpp  Humanizer.h
src/input/movement/: BezierCurve.h  OneEuroFilter.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h
src/tracking/: CMakeLists.txt  DataAssociation.cpp  DataAssociation.h  KalmanPredictor.cpp  KalmanPredictor.h  TargetSelector.cpp  TargetSelector.h  TargetTracker.cpp  TargetTracker.h
src/ui/: CMakeLists.txt
src/ui/backend/: D3D11Backend.cpp  D3D11Backend.h  ImGuiBackend.cpp  ImGuiBackend.h
src/ui/config_app/: CMakeLists.txt  ConfigApp.cpp
src/ui/overlay/: DebugOverlay.cpp  DebugOverlay.h  FrameProfiler.cpp  FrameProfiler.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  macroman-bench.cpp
tests/helpers/: FakeDetector.cpp  FakeDetector.h  FakeScreenCapture.cpp  FakeScreenCapture.h
tests/integration/: CMakeLists.txt  test_config_integration.cpp  test_pipeline_integration.cpp
tests/unit/: CMakeLists.txt  test_aim_command.cpp  test_bezier_curve.cpp  test_data_association.cpp  test_debug_overlay.cpp  test_detection_batch.cpp  test_fake_detector.cpp  test_fake_screen_capture.cpp  test_game_detector.cpp  test_global_config.cpp  test_input_humanization.cpp  test_input_integration.cpp  test_kalman_predictor.cpp  test_latest_frame_queue.cpp  test_math_types.cpp  test_performance_metrics.cpp  test_post_processor.cpp  test_profile_manager.cpp  test_shared_config.cpp  test_target_database.cpp  test_target_database_simd.cpp  test_target_selector.cpp  test_target_tracker.cpp  test_texture_pool.cpp  test_thread_manager.cpp
tools/: CMakeLists.txt  dataset-recorder.cpp  fix_opencv_paths.py
